# barsk

./: Cargo.toml  LICENSE  README.md
crates/barsk/: Cargo.toml
crates/barsk/src/: main.rs
crates/cipher/: Cargo.toml
crates/cipher/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  lib.rs  structs.rs
src/: command.rs  main.rs
src/bark/: commands.rs  de.rs  encrypt.rs  mod.rs  msg.rs
