[package]
name = "barsk"
version = "1.1.0"
edition = "2021"
authors = ["kc9vu"]
license-file = "LICENSE"

[profile.dist]
inherits = "release"
debug = false
lto = "thin"
opt-level = 1
strip = true

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
curl = "0.4"
json5 = "0.4"
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"] }
