[package]
name = "barsk"
version = "1.3.0"
edition = "2024"

[dependencies]
aes = "0.8"
anstream = "0.6"
anyhow = "1"
base64 = "0.22"
cbc = { version = "0.1", features = ["alloc"] }
clap = { version = "4.5", features = ["derive", "env"] }
json5 = "0.4"
owo-colors = "4.2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
url = "2.5.4"
