[package]
name = "barsk"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
licence.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "barsk"
path = "./src/main.rs"

[dependencies]
cli = { path = "../cli" }

clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
rust-crypto = { workspace = true }
reqwest = { workspace = true }

[lints]
workspace = true
