[package]
name = "cipher"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
licence.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-crypto = { workspace = true }
base64 = { workspace = true }

[lints]
workspace = true
