[package]
name = "cli"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
licence.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

cipher = { path = "../cipher" }

[lints]
workspace = true
